--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
-@charset "UTF-8";
-{
-<body> 
+@charset "UTF-8"
+{ 
+    body
     background-color: #ADD8E6;
-
     color: #ADD8E6;
     font-size: 12 pt;
-    font-family: arial
+    font-family: arial;
 }
