--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 
 body
 {
-    background-color: #ADD8E6;
-    color: #ADD8E6;
+    background-color: #black;
+    color: #red;
     font-size: 12 pt;
     font-family: arial;
     text-align: center;
