--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 body 
 {
     background-color: rgb(0, 0, 0);
-    color: rgba(255, 188, 133, 0.966);
+    color: rgb(255, 188, 133, 0.966);
     font-size: 12pt;
     font-family: Arial;
 }
