--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 @charset "UTF-8";
+
 body 
 {
+    text-align: justify;
     background-color: rgb(0, 0, 0);
-    color: rgb(255, 188, 133, 0.966);
+    color: rgb(255, 188, 133);
     font-size: 12pt;
     font-family: Arial;
 }
