--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@
 body 
 {
     text-align: justify;
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(240, 240, 240);
+    background-color: #f0f0f0; 
     color: rgb(255, 188, 133);
     font-size: 12pt;
     font-family: Arial;
