--- a/style.css
+++ b/style.css
@@ -16,5 +16,11 @@ h1
 }
 
 .container {
+    background: linear-gradient(to bottom, #6489ec, #2b20c0);
+}
+
+
+.container {
     display: flex;
   }
+
