--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 body 
 {
     text-align: justify;
-    background: linear-gradient(to bottom, #6489ec, #2b20c0);
+    background: linear-gradient(to bottom, #b9c7ec, #6489ec, #2b20c0);
     color: rgb(255, 188, 133);
     font-size: 12pt;
     font-family: Arial;
