--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 body 
 {
     text-align: justify;
-    background: linear-gradient(to bottom, #b9c7ec, #6489ec, #2b20c0);
+    background: linear-gradient(to bottom, #b9ecb9, #74ec64, #18dd39);
     color: #080808;
     font-size: 12pt;
     font-family: Arial;
